Fix styling to remove scrollbar behavior

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-body {
+html, body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
